# slim-ml

./: .coderabbit.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: qwen3.6_35b_a3b.toml  qwen3_next_80b_a3b.toml
docs/: expert-cache-dataflow.excalidraw  expert-cache-rfc.md
src/slim_ml/: backend.py  budget.py  cli.py  lc_sweep.py  llamacpp_config.py  model.py  prompt_lookup.py  runtime.py  spec_decode.py  technique.py  telemetry.py
tests/: test_budget.py  test_llamacpp_config.py  test_prompt_lookup.py  test_routing_hook.py
tools/: kv_bits_bench.py  routing_observe.py  routing_probe.py  spec_decode_correctness.py  spec_decode_probe.py  spec_decode_standalone.py
