[project]
name = "slim-ml"
version = "0.0.1"
description = "Adaptive LLM runtime for running big models on constrained hardware"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "PewterZz" }]
keywords = ["llm", "mlx", "llama-cpp", "moe", "inference", "quantization"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "psutil>=5.9",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/PewterZz/slim-ml"
Repository = "https://github.com/PewterZz/slim-ml"
Issues = "https://github.com/PewterZz/slim-ml/issues"

[project.optional-dependencies]
mlx = ["mlx>=0.20", "mlx-lm>=0.20"]
llama = ["llama-cpp-python>=0.3"]
dev = ["pytest>=8.0"]

[project.scripts]
slim-ml = "slim_ml.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slim_ml"]
